# on-device-llm-tester

./: #01_DASHBOARD_ARCHITECTURE.md  #02_DB_MIGRATION_ARCHITECTURE.md  #03_CICD_ARCHITECTURE.md  #04_MULTIDEVICE_ARCHITECTURE.md  #05.5_RESPONSE_VALIDATION_ARCHITECTURE.md  #05_QUALITY_EVAL_ARCHITECTURE.md  #06_LLMCPP_ARCHITECTURE.md  #07_RESOURCE_PROFILING_ARCHITECTURE.md  #08_QUANT_COMPARISON_ARCHITECTURE.md  .gitignore  .gitmodules  CLAUDE.md  DEPLOYMENT_ARCHITECTURE.md  README.md  pyrightconfig.json  render.yaml  requirements.txt  test_config.json  vercel.json
.github/workflows/: benchmark.yml  test-turso.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
android/gradle/wrapper/: gradle-wrapper.properties
api/: cache.py  db.py  db_adapter.py  index.py  loader.py  main.py  requirements.txt  schemas.py  stats.py  turso_client.py  utils.py
api/validation/: schemas_validation.py  validation_routes.py  validation_stats.py
dashboard/: .env.production.example  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/hooks/: useDeviceCompare.ts  useFilters.ts  useQuantCompare.ts  useResults.ts  useValidation.ts
dashboard/src/lib/: auth.ts
scripts/: device_discovery.py  ingest.py  report.py  resource_profiler.py  response_validator.py  runner.py  setup.py  shuttle.py  sync_results.py
scripts/validators/: __init__.py  deterministic.py  sanity.py  structural.py
tests/: test_utils.py  test_validators.py
(+44 files in other folders)
